hero image overflow fix

--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -82,7 +82,7 @@ footer {
 
   /* Set a specific height */
   height: 50vh;
-  width: 100vw;
+  width: 100%;
   /* Position and center the image to scale nicely on all screens */
   background-position: center;
   background-repeat: no-repeat;
